Adding the positibily to set the public folder name by env variable

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 user www-data;
 worker_processes 4;
 pid /var/run/nginx.pid;
-
+env WEBPUBLIC;
 events {
 	worker_connections 768;
 	# multi_accept on;
 }
 
 http {
-
+	perl_set $webpublic 'sub { return $ENV{"WEBPUBLIC"}; }';
 	##
 	# Basic Settings
 	##
