--- a/nginx.conf
+++ b/nginx.conf
@@ -2,13 +2,18 @@ user www-data;
 worker_processes auto;
 pid /var/run/nginx.pid;
 env WEBPUBLIC;
+env DATASTORE_PORT_27017_TCP_ADDR;
+env DATASTORE_PORT_27017_TCP_PORT;
 events {
 	worker_connections 768;
 	# multi_accept on;
 }
 
 http {
+	variables_hash_max_size 1024;
 	perl_set $webpublic 'sub { return $ENV{"WEBPUBLIC"}; }';
+	perl_set $datastore_port_27017_tcp_addr 'sub { return $ENV{"DATASTORE_PORT_27017_TCP_ADDR"}; }';
+	perl_set $datastore_port_27017_tcp_port 'sub { return $ENV{"DATASTORE_PORT_27017_TCP_PORT"}; }';
 	##
 	# Basic Settings
 	##
